--- a/index.html
+++ b/index.html
@@ -1,10 +1,89 @@
-<!-- 示例 index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My ChatLLM Demo</title>
-  </head>
-  <body>
-    <h1>Hello from GitHub Pages!</h1>
-  </body>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ChatLLM-Web 演示页面</title>
+  <style>
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 2em;
+      color: #333;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 2em;
+    }
+    .status {
+      padding: 1em;
+      border-radius: 8px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      max-width: 600px;
+      margin: auto;
+    }
+    .gpu-status {
+      font-weight: bold;
+      color: #0078d4;
+    }
+    button {
+      padding: 0.6em 1.2em;
+      font-size: 1em;
+      margin-top: 1em;
+      cursor: pointer;
+      background-color: #0078d4;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+    button:hover {
+      background-color: #005fa3;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>🚀 ChatLLM-Web 演示页面</h1>
+    <p>欢迎使用 GitHub Pages 部署的 WebGPU 模型测试环境</p>
+  </header>
+
+  <div class="status">
+    <p>🔍 当前 WebGPU 状态：</p>
+    <p class="gpu-status" id="gpuStatus">正在检测...</p>
+    <button onclick="checkWebGPU()">重新检测</button>
+  </div>
+
+  <div class="status" style="margin-top:2em;">
+    <p>📦 模型加载入口（示例）</p>
+    <button onclick="loadModel()">加载模型</button>
+    <p id="modelStatus">尚未加载</p>
+  </div>
+
+  <script>
+    function checkWebGPU() {
+      const status = document.getElementById("gpuStatus");
+      if (!navigator.gpu) {
+        status.textContent = "❌ WebGPU 不支持，请使用最新版 Chrome 或 Edge 并启用 WebGPU";
+        status.style.color = "red";
+      } else {
+        status.textContent = "✅ WebGPU 已启用！";
+        status.style.color = "green";
+      }
+    }
+
+    function loadModel() {
+      const modelStatus = document.getElementById("modelStatus");
+      // 模拟加载过程（你可以替换为真实模型加载逻辑）
+      modelStatus.textContent = "正在加载模型...";
+      setTimeout(() => {
+        modelStatus.textContent = "✅ 模型加载完成（模拟）";
+      }, 1500);
+    }
+
+    // 页面加载时自动检测 WebGPU
+    window.onload = checkWebGPU;
+  </script>
+</body>
 </html>
