--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>🤖 欢迎体验 AI 对话平台</h1>
-    <p>本平台支持 WebGPU 推理，无需安装，即刻体验</p>
+    <p>支持 WebGPU 推理，无需安装，即刻体验</p>
   </header>
 
   <main>
@@ -22,33 +22,31 @@
 
     <section class="card">
       <h2>📦 模型加载</h2>
-<select id="modelSelector">
-  <option value="chatglm">ChatGLM</option>
-  <option value="qwen">Qwen</option>
-  <option value="minicpm">MiniCPM</option>
-</select>
-
+      <select id="modelSelector">
+        <option value="chatglm">ChatGLM</option>
+        <option value="qwen">Qwen</option>
+        <option value="minicpm">MiniCPM</option>
+      </select>
       <button id="loadModelBtn">加载模型</button>
       <p id="modelStatus">尚未加载</p>
     </section>
 
-	<section class="card">
-	  <h2>💬 与 AI 对话</h2>
-	  <textarea id="userInput" placeholder="请输入你的问题..."></textarea>
-	  <button id="sendBtn">发送</button>
-	  <div id="chatHistory"></div>
-	</section>
+    <section class="card">
+      <h2>💬 与 AI 对话</h2>
+      <textarea id="userInput" placeholder="请输入你的问题..."></textarea>
+      <button id="sendBtn">发送</button>
+      <div id="chatHistory"></div>
+    </section>
 
+    <section class="card">
+      <h2>📣 邀请好友体验</h2>
+      <button onclick="copyInvite()">复制邀请链接</button>
+      <p id="inviteStatus">点击按钮复制链接</p>
+    </section>
   </main>
 
   <footer>
-    <p>© 2025 ChatLLM-Web | <a href="#">邀请好友体验</a></p>
-<section class="card">
-  <h2>📣 邀请好友体验</h2>
-  <button onclick="copyInvite()">复制邀请链接</button>
-  <p id="inviteStatus">点击按钮复制链接</p>
-</section>
-
+    <p>© 2025 ChatLLM-Web | <a href="#">邀请体验</a></p>
   </footer>
 </body>
 </html>
